add api for learning page
