# routes/api.php
@@ -4,6 +4,8 @@ use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\ChapterController;
 use App\Http\Controllers\Api\CourseController;
 use App\Http\Controllers\Api\TopicController;
+use App\Http\Controllers\Api\CourseStructureController;
+use App\Http\Controllers\Api\TopicContentController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -45,3 +47,7 @@ Route::get('chapters/{chapter}/topics', [TopicController::class, 'index']);
 
 // Route for updating topic sort order
 Route::put('topics/sort-order', [TopicController::class, 'updateSortOrder']);
+
+// New routes
+Route::get('/courses/{course}/structure', [CourseStructureController::class, 'show']);
+Route::get('/topics/{topic}/content', [TopicContentController::class, 'show']);
